Add R pipeline, reports, plots and models

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,17 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# R / RStudio
+.Rhistory
+.RData
+.Rproj.user/
+
+# OS
+.DS_Store
+
+# Archives
+*.zip
+
+# Report build artifacts (optional)
+Final_Report_files/
